PlacementManagementSystem/force-app/main/default/objects/Job__c/fields/Allowed_Department_c__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Department_c__c</fullName>
    <label>Allowed_Department__c</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSE</fullName>
            </value>
            <value>
                <fullName>ECE</fullName>
            </value>
            <value>
                <fullName>EEE</fullName>
            </value>
            <value>
                <fullName>MECH</fullName>
            </value>
            <value>
                <fullName>CIVIL</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>