PlacementManagementSystem/force-app/main/default/objects/Job__c/fields/Bond_Details__c.field-meta.xml
<CustomField>
    <fullName>Bond_Details__c</fullName>
    <label>Bond Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>