PlacementManagementSystem/force-app/main/default/objects/Job__c/fields/Expected_Skills__c.field-meta.xml
<CustomField>
    <fullName>Expected_Skills__c</fullName>
    <label>Expected Skills</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>