PlacementManagementSystem/force-app/main/default/objects/Job__c/fields/Graduation_Year_c__c.field-meta.xml
<CustomField>
    <fullName>Graduation_Year_c__c</fullName>
    <defaultValue>YEAR(TODAY())</defaultValue>
    <label>Graduation_Year__c</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>