PlacementManagementSystem/force-app/main/default/objects/Job__c/fields/Internship_Period__c.field-meta.xml
<CustomField>
    <fullName>Internship_Period__c</fullName>
    <label>Internship Period</label>
    <length>80</length>
    <type>Text</type>
</CustomField>