PlacementManagementSystem/force-app/main/default/objects/Job__c/fields/Mode_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Work__c</fullName>
    <label>Mode of Work</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On-Site</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>Remote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>