PlacementManagementSystem/force-app/main/default/objects/Job__c/fields/Package_LPA__c.field-meta.xml
<CustomField>
    <fullName>Package_LPA__c</fullName>
    <label>Package (LPA)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>